# EV-Washington-Analytics-Project

./: .gitignore  README.md  main.py  pyproject.toml
data/: washington_pop_data.xlsx
data_processing/python_scripts/: county_population_imports.py  csv_import.py  geometric_median_computation.py  insert2db_gm_pop.py  populating.py  visualizations.py
database/: create_db.py  sample.txt
docs/: references.typ
notes/: geometric_median.typ  resources_used.typ
python/: 02_import.py  04_populating.py  coordinate_analysis.py  county_population_imports.py  export_gm_county_pops.py  import.py  populating.py  pyproject.toml  visualizations.py
python/data_processing/: county_population_imports.py
python_scripts/: county_population_imports.py  create_db.py  csv_import.py  geometric_median_computation.py  insert2db_gm_pop.py  populating.py  visualizations.py
reports/power_bi/: 07_sample.txt
sql/: 01_schema.sql  03_populating.sql  05_indexes.sql  06_exploration_queries.sql  07_postal_code_heatmap.sql  08_coordinate_clusters.sql  coordinate_clusters.sql  exploration_queries.sql  indexes.sql  populating.sql  schema.sql
src/analysis/: geometric_median_computation.py
src/data/: county_population_imports.py  create_db.py  csv_import.py  insert2db_gm_pop.py  populating.py
src/python_scripts/: insert2db_gm_pop.py  visualizations.py
src/sql/: populating.sql  schema.sql
