[project]
name = "ev"
version = "0.1.0"
description = "Python dependencies for this Washington State Electric Vehicle Analytics Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyproj>=3.7.2",
    "scipy>=1.17.1",
]
